sidebar not fixed
- otherwise, sponsors spill off bottom and are never visible

--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -322,7 +322,6 @@ img {
 header {
   width: 270px;
   float: left;
-  position: fixed;
   -webkit-font-smoothing: subpixel-antialiased; }
 
 header ul {
